testData/inspections/string-assigned-to-nil/tooManyValues.go
package main

func main() {
	var var1, var2 string = "nil", <error descr="String cannot be nil"><caret>nil</error>, 5 + 13
}